--- a/package.json
+++ b/package.json
@@ -76,7 +76,14 @@
     "core-js": "^2.4.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "lodash": "^4.17.2",
+    "ng2-redux": "^4.1.0",
+    "normalizr": "^2.2.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "reselect": "^2.5.4",
     "rxjs": "5.0.0-beta.12",
+    "seamless-immutable": "^6.3.0",
     "zone.js": "~0.6.26"
   },
   "devDependencies": {
